# HBBFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hbb/ffmepg/code/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AbleCallJava.cpp  AndroidLog.h  CMakeLists.txt  VideoDecoder.cpp  VideoDecoder.h  native-lib.cpp
app/src/main/java/com/hbb/ffmepg/code/: AbleSoftLayout.java  BaseActivity.java  LayoutHelper.java  MainActivity.java  NativeCallBack.java  Position.java  SoftConstant.java  SoftwareVideoDeCode.java  wwwww.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hbb/ffmepg/code/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libffmpeg/: README.txt  build.gradle
libffmpeg/src/main/cpp/: AbleCallJava.h  AndroidLog.h  CMakeLists.txt  HbbGlobalStatus.cpp  HbbGlobalStatus.h  HbbQueue.cpp  HbbQueue.h  VideoDecoder.cpp  VideoDecoder.h  hbbFFmpeg.cpp  native-lib.cpp
libffmpeg/src/main/cpp/libyuv/: YuvHandler.cpp  YuvHandler.h
libffmpeg/src/main/java/com/hbb/ffmpeg/: SoftwareVideoDeCode.java
libffmpeg/src/main/java/com/hbb/ffmpeg/annotation/: NativeCallBack.java
libffmpeg/src/main/java/com/hbb/ffmpeg/decode/: AbleTextureView.java  BaseDecode.java  HardwareVideoDecode.java  IVideoDecode.java
libffmpeg/src/main/java/com/hbb/ffmpeg/opengl/: AbleGLSurfaceView.java  AbleRender.java  AbstractFilter.java  DeCodeVideoFilter.java
(+17 files in other folders)
